nixrs-derive-tests/tests/ui/parse_mising_version.stderr
error: expected `=`
 --> tests/ui/parse_mising_version.rs
  |
  |     #[nix(version)]
  |                  ^
